--- a/catalogo.html
+++ b/catalogo.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="css/app.css">
 
   <!-- Fontawesome -->
-  <script src="assets/fontawesome-all.min.js"></script>
+  <!-- <script src="assets/fontawesome-all.min.js"></script> -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  
   <title>Platzishop</title>
 </head>
 <body>
